Fix menu item text overflow
Since menu items may use display:flex, we need to put the link content
in a child element for text-overflow to work.

--- a/site/styles/views/_docs.scss
+++ b/site/styles/views/_docs.scss
@@ -199,8 +199,11 @@
 			a {
 				padding-top: 0.25em;
 				padding-bottom: 0.25em;
-				text-overflow: ellipsis;
-				overflow: hidden;
+
+				span {
+					text-overflow: ellipsis;
+					overflow: hidden;
+				}
 			}
 		}
 	}
